Fix JS error dan menambah code wrap

--- a/sass/_syntaxhighlight.scss
+++ b/sass/_syntaxhighlight.scss
@@ -12,7 +12,6 @@ code {
     font-size: 96%;
     margin: 0 .2rem;
     padding: .2rem .5rem;
-    white-space: nowrap;
 }
 
 pre {
