--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,8 +87,7 @@ code {
   border-radius: .4rem;
   font-size: 96%;
   margin: 0 .2rem;
-  padding: .2rem .5rem;
-  white-space: nowrap; }
+  padding: .2rem .5rem; }
 
 pre {
   background: #f4f5f6; }
